<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/loginAction"
        android:icon="@mipmap/ic_vk_logo"
        android:showAsAction="never"
        android:title="@string/login"
        />

    <item
        android:id="@+id/loginMyMusicAction"
        android:icon="@drawable/ic_favorite"
        android:showAsAction="never"
        android:title="@string/load_my_vk_list"
        />

    <item
        android:id="@+id/loadPopularAction"
        android:icon="@drawable/ic_popular"
        android:showAsAction="never"
        android:title="@string/load_popular"
        />

    <item
        android:id="@+id/loadLocalAction"
        android:icon="@drawable/ic_local"
        android:showAsAction="never"
        android:title="@string/load_local"
        />

    <item
        android:id="@+id/syncAction"
        android:icon="@drawable/ic_sync"
        android:showAsAction="never"
        android:title="@string/sync"
        />


</menu>