<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.maximgorbatyuk.vkclient.MainActivity">


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FriendList"
        android:layout_below="@+id/relativeLayout">

    </ListView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play"
            android:text="@string/play"
            android:onClick="PlayMusic"
            />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stop"
            android:text="@string/stop"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:onClick="StopMusic"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pause"
            android:text="@string/pause"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="PauseMusic"
            />

    </RelativeLayout>

</RelativeLayout>
